# magnet-pinn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  changelog  custom_phantom_usage_example.ipynb  pyproject.toml  uv_usage.md
.github/workflows/: test_all.yaml  test_os_full_suite.yaml  test_python313.yaml  test_ubuntu.yaml
docs/: readme_docs.md
docs/source/: about.rst  api.rst  conf.py  examples.rst  features.rst  gallery.rst  guide.rst  index.rst  papers.rst  results.rst  start.rst
examples/: a.ipynb  advanced_unet.py  build_dataset.ipynb  example_divergence.py  example_faraday.py  example_findiff.py  example_findiff_coeffs.py  example_physics.py  example_unet.py  example_unet3d.py  example_unet3d_predictions.py  example_unet_pl.py  forms.ipynb  grid_dataloading.py  grid_preprocessing.py  meshes_generation.ipynb  meshes_generation.py  meshes_generation_inside_custom_mesh.py  meshes_generation_inside_custom_mesh_batch.py  meta_normalization.py  normalization.py  plot_3d.py  plot_grid_data.py  plot_slices.ipynb  point_dataloading.py  point_preprocessing.py  preprocessing.ipynb
magnet_pinn/: __init__.py
magnet_pinn/data/: __init__.py  _base.py  augmentations.py  dataitem.py  dataset.py  grid.py  point.py  transforms.py  utils.py
magnet_pinn/generator/: __init__.py  __main__.py  io.py  meshes.py  phantoms.py  polyhedron.py  postprocessing.py  properties.py  samplers.py  serializers.py  structures.py  transforms.py  typing.py  utils.py
magnet_pinn/generators/: _base.py  _blobs.py  _perlin_noise.py
magnet_pinn/losses/: __init__.py  base.py  physics.py  utils.py
magnet_pinn/models/: __init__.py
magnet_pinn/prediction/: __init__.py  grid_writer.py  point_writer.py  writer.py
magnet_pinn/preprocessing/: __init__.py  __main__.py  cli.py  preprocessing.py  reading_field.py  reading_properties.py  simulation.py  utils.py  voxelizing_mesh.py
magnet_pinn/utils/: __init__.py  _input_normalization.py  _normalization.py  _perlin_noise.py
tests/: conftest.py
tests/dataloading/: conftest.py  helpers.py  test_grid.py  test_iterators.py  test_pointcloud.py  test_transforms.py  test_utils.py
tests/generation/: conftest.py  test_cli.py  test_helpers.py  test_io.py  test_main.py  test_phantoms.py  test_samplers.py  test_serializers.py  test_structures.py  test_transforms.py  test_typing.py  test_utils.py
tests/integration/: conftest.py  test_end_to_end_dataloading.py
tests/physics/: conftest.py  test_losses.py  (+2 more)
(+48 files in other folders)
