[project]
name = "magnet-pinn"
version = "0.0.13alpha3"
description = "This is the software package for simulating EM Fields using NNs"
authors = [
    { name = "Andrzej Dulny", email = "andzej.dulny@gmail.com" },
    { name = "Anna Krause", email = "krause@informatik.uni-wuerzburg.de" },
    { name = "Farzad Jabbarigargari", email = "Jabbarigar_F@ukw.de" },
    { name = "Alex Tarasov", email = "tarasov.oleksander@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26.4",
    "trimesh>=4.2.4",
    "h5py>=3.10.0",
    "mypy>=1.9.0",
    "torch>=2.3.1",
    "rtree>=1.2.0",
    "scipy>=1.13.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "einops>=0.8.0",
    "libigl>=2.6.1",
    "findiff>=0.10.2",
    "natsort>=8.4.0",
    "ordered-set>=4.1.0",
    "manifold3d>=3.1.0",
]

[project.optional-dependencies]
linters = ["pre-commit", "black", "mypy", "pylint", "flake8", "isort"]

[dependency-groups]
dev = [
    "matplotlib>=3.8.4",
    "jupyterlab>=4.1.5",
    "ipywidgets>=8.1.2",
    "sphinx>=7.2.6",
    "jupyterlab-widgets>=3.0.10",
    "black>=24.4.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pre-commit-hooks>=4.6.0",
    "pre-commit>=3.7.0",
    "pip-tools>=7.4.1",
    "numpydoc>=1.7.0",
    "sphinx-conestack-theme>=1.0b3",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-design>=0.5.0",
    "pandas>=2.2.2",
    "pytest>=8.3.2",
    "coverage>=7.6.3",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
